css fix double table border on mobile view removed

--- a/src/frontend/styles/sass/_mediaQueries.scss
+++ b/src/frontend/styles/sass/_mediaQueries.scss
@@ -73,8 +73,8 @@ and (max-device-width: 811px)  {
   .ui.table:not(.unstackable) tr {
     padding-top: 1em;
     padding-bottom: 1em;
-    -webkit-box-shadow: 0px -1px 0px 0px rgba(0, 0, 0, 0.1) inset !important;
-    box-shadow: 0px -1px 0px 0px rgba(0, 0, 0, 0.1) inset !important;
+    -webkit-box-shadow: none !important;
+    box-shadow: none !important;
   }
 }
 
